# llmd

./: .gitignore  Cargo.toml  README.md  debug_error.rs  debug_test.rs  download_models.py  test_loadplan.rs  test_optional_embeddings.rs
docs/: execution_model.md  extending_the_language.md  extending_the_language_target.md  syntax.md
models/llm/llama-3.2-1B/: config.json
models/minilm/: config.json
schemas/: intent.schema.json
src/: embedding_decision.rs  executor.rs  lib.rs  llm.rs  llm_registry.rs  main.rs  model.rs  persona_memory.rs  routes.rs  state.rs  system_prompt.rs  toolport.rs  vector_store.rs
src/core/: mod.rs  model.rs  relation_map.rs
src/core/schema/: mod.rs
src/llm/: llm_factory.rs  mod.rs  prompt_format.rs  system_prompt.rs
src/memory/: embedding_decision.rs  embedding_observability.rs  mod.rs  storage.rs  vector_store.rs
src/prompts/: intent_compiler.txt
src/runtime/: executor.rs  mod.rs  routes.rs  state.rs  toolport.rs
src/schema/: mod.rs
src/tools/: echo.rs  graphql.rs  mod.rs
src/tools/graphql/: ast.rs  intent_lowering.rs  relations.rs
