[package]
name = "llmd"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"


anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
candle = { package = "candle-core", version = "0.9" }
candle-nn = "0.9"
candle-transformers = "0.9"
tokenizers = "0.19"
rusqlite = { version = "0.31", features = ["bundled"] }
hnsw_rs = "0.3"
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
tokio-stream = "0.1"
futures = "0.3"